# Learn_Cpp

./: .gitignore  .gitpod.dockerfile  New_Project.sh  README.md
.github/workflows/: main.yml
CV_Plot/: .gitignore  CMakeLists.txt
CV_Plot/resources/: GME00102404.csv
CV_Plot/src/: weather_analysis.cpp
Class/: CMakeLists.txt  Class  Class.c++
Exception/: CMakeLists.txt
Exception/include/: Exception.hpp
Exception/src/: Exception.cpp  main.cpp
Exception/test/: Exception_test.cpp
Hello_World/: CMakeLists.txt  Hello_World.c++
Inheritance/: CMakeLists.txt
Inheritance/include/: Inheritance.h
Inheritance/src/: Inheritance.cpp  main.cpp
Inheritance/test/: Inheritance_test.cpp
Open_CV/: CMakeLists.txt
Open_CV/src/: hello_world.cpp
Recursion/: CMakeLists.txt
Recursion/include/: Recursion.h
Recursion/src/: Recursion.cpp  main.cpp
Recursion/test/: Recursion_test.cpp
Templates/: CMakeLists.txt
Templates/include/: Templates.hpp
Templates/src/: Templates.cpp  main.cpp
Templates/test/: Templates_test.cpp
Tests/: CMakeLists.txt
Tests/src/: main.cpp  student.c
dynamic_memory/: CMakeLists.txt
dynamic_memory/src/: main.c
dynamic_memory_cpp/: CMakeLists.txt
dynamic_memory_cpp/include/: own_array.h
dynamic_memory_cpp/src/: main.cpp  own_array.cpp
dynamic_memory_cpp/test/: Test.cpp
polymorphism/: CMakeLists.txt
polymorphism/include/: polymorphism.hpp
polymorphism/src/: main.cpp  polymorphism.cpp
polymorphism/test/: polymorphism_test.cpp
